--- a/apps/users/templates/gestion_usuarios/index_usuarios.html
+++ b/apps/users/templates/gestion_usuarios/index_usuarios.html
@@ -48,7 +48,7 @@
 
 <div class="row my-4 justify-content-md-between">
 
-	<a href="" class="card-link">
+	<a href="{% url 'gestion_clientes' %}" class="card-link">
 		<div class="card-index border-success col-sm-4">
 			<div class="card-body">
 				<h4 class="card-title">Gestión de Clientes</h4>
