--- a/apps/users/templates/users/registro_cliente.html
+++ b/apps/users/templates/users/registro_cliente.html
@@ -1,4 +1,4 @@
-<form method="POST" action="{% url 'almacenar_cliente' %}" class="post-form">
+<form method="POST" action="{% url 'registrar_cliente' %}" class="post-form">
 
 	<fieldset>
 		<p>Registrate en nuestro taller y ten acceso a solicitar citas y a otras promociones. <br> Tu información nunca será compartida.</p>
