--- a/apps/taller/templates/index_admin.html
+++ b/apps/taller/templates/index_admin.html
@@ -21,36 +21,22 @@
 
 	<div class="row mt-4 justify-content-md-between">
 
-		<a href="" class="card-link" data-toggle="modal" data-target="#exampleModal2">
+		<a href="{% url 'gestion_clientes' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
-					<h4 class="card-title">Nueva Visita</h4>
+					<h4 class="card-title">Gesti&oacute;n de Clientes</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Registre una nueva visita por parte de un cliente a
-							su taller.</p>
-						<i class="fas fa-concierge-bell fa-3x"></i>
+						<p class="card-text col-sm-10 text-justify">Gestione a sus empleados administrativos y técnicos.
+						</p>
+						<i class="fas fa-users fa-3x"></i>
 					</div>
 				</div>
 			</div>
 		</a>
-
 		<a href="" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
-					<h4 class="card-title">Gestion de Visitas</h4>
-					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Vea las visitas y procesos que se llevan a cabo en
-							este momento.</p>
-						<i class="fas fa-toolbox fa-3x"></i>
-					</div>
-				</div>
-			</div>
-		</a>
-
-		<a href="" class="card-link">
-			<div class="card-index border-success col-sm-4">
-				<div class="card-body">
-					<h4 class="card-title">Gesti&oacute;n de Solicitudes</h4>
+					<h4 class="card-title">Gesti&oacute;n de Citas</h4>
 					<div class="row">
 						<p class="card-text col-sm-10 text-justify">Apruebe o rechace las solicitudes de visita sin
 							revisar o consulte solicitudes antiguas.</p>
@@ -59,17 +45,30 @@
 				</div>
 			</div>
 		</a>
+
+		<a href="{% url 'gestionar_slots' %}" class="card-link">
+			<div class="card-index border-success col-sm-4">
+				<div class="card-body">
+					<h4 class="card-title">Gesti&oacute;n de Visitas Activas</h4>
+					<div class="row">
+						<p class="card-text col-sm-10 text-justify">Gestione los slots con los que dispone su taller.
+						</p>
+						<i class="fas fa-home fa-3x"></i>
+					</div>
+				</div>
+			</div>
+		</a>
 	</div>
 
 	<div class="row mt-4 justify-content-md-between">
-		<a href="{% url 'gestion_usuarios' %}" class="card-link">
+
+		<a href="{% url 'gestion_tecnicos' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
-					<h4 class="card-title">Gesti&oacute;n de Usuarios</h4>
+					<h4 class="card-title">Gestion de Técnicos</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Gestione a sus empleados administrativos y técnicos.
-						</p>
-						<i class="fas fa-users fa-3x"></i>
+						<p class="card-text col-sm-10 text-justify">Gestione los miembros del cuerpo de técnicos de su taller.</p>
+						<i class="fas fa-wrench fa-3x"></i>
 					</div>
 				</div>
 			</div>
@@ -81,7 +80,7 @@
 					<div class="row">
 						<p class="card-text col-sm-10 text-justify">Gestione las diferentes especialidades de sus
 							empleados.</p>
-						<i class="fas fa-users fa-3x"></i>
+						<i class="fas fa-certificate fa-3x"></i>
 					</div>
 				</div>
 			</div>
@@ -91,11 +90,14 @@
 				<div class="card-body">
 					<h4 class="card-title">Gesti&oacute;n de Slots</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Gestione los slots bla bla bla bla bla.</p>
-						<i class="fas fa-toolbox fa-3x"></i>
+						<p class="card-text col-sm-10 text-justify">Gestione los slots con los que dispone su taller.
+						</p>
+						<i class="fas fa-warehouse fa-3x"></i>
 					</div>
 				</div>
 			</div>
 		</a>
+		
 	</div>
+
 </div>
