Agregando funcionalidades de Admin

--- a/apps/taller/templates/index_admin.html
+++ b/apps/taller/templates/index_admin.html
@@ -33,6 +33,18 @@
 				</div>
 			</div>
 		</a>
+		<a href="{% url 'gestion_visitas' %}" class="card-link">
+			<div class="card-index border-success col-sm-4">
+				<div class="card-body">
+					<h4 class="card-title">Gesti&oacute;n de Visitas Activas</h4>
+					<div class="row">
+						<p class="card-text col-sm-10 text-justify">Gestione los slots con los que dispone su taller.
+						</p>
+						<i class="fas fa-home fa-3x"></i>
+					</div>
+				</div>
+			</div>
+		</a>
 		<a href="" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
@@ -41,19 +53,6 @@
 						<p class="card-text col-sm-10 text-justify">Apruebe o rechace las solicitudes de visita sin
 							revisar o consulte solicitudes antiguas.</p>
 						<i class="fas fa-check-double fa-3x"></i>
-					</div>
-				</div>
-			</div>
-		</a>
-
-		<a href="{% url 'gestionar_slots' %}" class="card-link">
-			<div class="card-index border-success col-sm-4">
-				<div class="card-body">
-					<h4 class="card-title">Gesti&oacute;n de Visitas Activas</h4>
-					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Gestione los slots con los que dispone su taller.
-						</p>
-						<i class="fas fa-home fa-3x"></i>
 					</div>
 				</div>
 			</div>
