--- a/apps/taller/templates/visitas/visitas-cliente.html
+++ b/apps/taller/templates/visitas/visitas-cliente.html
@@ -131,9 +131,15 @@
 				<div class="col-sm-9">
 					<select class="form-control" id="tecnico-visita" name="tecnico_visita">
 						{% for tecnico in tecnicos %}
-							<option id='' name='' value="{{ tecnico.id }}">
+						{% if tecnico not in tecnicos_ocupados %}
+							<option value="{{ tecnico.id }}">
 								{{tecnico.user.first_name}}&nbsp;{{tecnico.user.last_name}}&nbsp;-&nbsp;{{tecnico.especializacion.nombre}}
 							</option>
+						{% else %}
+							<option value="{{ tecnico.id }}" class="bg-danger text-white"" disabled="">
+								{{tecnico.user.first_name}}&nbsp;{{tecnico.user.last_name}}&nbsp;-&nbsp;{{tecnico.especializacion.nombre}} - Ocupado
+							</option>
+						{% endif %}
 						{% endfor %}
 					</select>
 				</div>
