--- a/apps/users/templates/gestion_usuarios/gestion_clientes.html
+++ b/apps/users/templates/gestion_usuarios/gestion_clientes.html
@@ -18,25 +18,27 @@
 			<thead>
 				<tr class="d-flex bg-primary text-white text-center">
 					<th class="col-1">N°</th>
-					<th class="col-2">Nombre</th>
-					<th class="col-2">Apellido</th>
+					<th class="col-3">Nombre</th>
 					<th class="col-1">Telefono</th>
 					<th class="col-2">Correo</th>
-					<th class="col-4">Opciones</th>
+					<th class="col-5">Opciones</th>
 				</tr>
 			</thead>
 			<tbody>
 				{% for cliente in clientes %}
 				<tr class="d-flex text-center">
 					<td class="col-1 font-weight-bold">{{ forloop.counter }}</td>
-					<td class="col-2 font-weight-bold">{{cliente.user.first_name}}</td>
-					<td class="col-2">{{cliente.user.last_name}}</td>
+					<td class="col-3 font-weight-bold">{{cliente.user.first_name}} {{cliente.user.last_name}}</td>
 					<td class="col-1">{{cliente.user.telefono}}</td>
 					<td class="col-2">{{cliente.user.email}}</td>
-					<td class="col-4">
+					<td class="col-5">
 
 						<a href="{% url 'gestion_visitas_cliente' cliente_id=cliente.id %}" class="btn btn-info" title="Ver detalles de las Visitas realizadas por el cliente al taller"
 						>Visitas&nbsp;&nbsp;<i class="fas fa-home"></i>
+						</a>
+
+						<a href="{% url 'vehiculos_admin' cliente_id=cliente.id %}" class="btn btn-info" title="Ver detalles de las Vehículos del Cliente registrados"
+						>Vehículos&nbsp;&nbsp;<i class="fas fa-car-side"></i>
 						</a>
 
 						<button class="btn btn-success" title="Editar Información del T&eacute;cnico"
