Reordenando algunas funcionalidades en los index

--- a/apps/taller/static/css/estilo.css
+++ b/apps/taller/static/css/estilo.css
@@ -124,3 +124,9 @@ html,body{
 	border-top: solid;
 	border-bottom: solid;
 }
+
+#btn-login:hover{
+	color:;
+	background-color:gold;
+	border: gold;
+}
