--- a/apps/taller/templates/visitas/visitas-cliente.html
+++ b/apps/taller/templates/visitas/visitas-cliente.html
@@ -9,6 +9,12 @@
 	<div class="pt-3">
 		<h2>Visitas</h2>
 		<p class="lead">Visitas al taller del cliente <span class="text-info">{{cliente.user.first_name}} {{cliente.user.last_name}}</span></p>
+		<div class="row">
+			<span class="col-md-10"></span>
+			<a href="{% url 'vehiculos_admin' cliente_id=cliente.id %}" title="Agrega vehículos al cliente" class="btn btn-success col-md-2">
+				Gestión de Vehículos&nbsp;&nbsp;<i class="fas fa-car-side"></i>
+			</a>
+		</div>
 	</div>
 
 	<div class="row mt-0 justify-content-md-center">
@@ -21,6 +27,7 @@
 				<tr class="d-flex bg-primary text-white text-left mt-4 align-items-center">
 					<th class="col-6 border-0 "><i class="fas fa-car-side"></i>&nbsp;&nbsp;&nbsp;&nbsp;{{vehiculo.marca}}&nbsp;{{vehiculo.modelo}}&nbsp;-&nbsp;{{vehiculo.placa}}</th>
 					<th class="col-6 text-right border-0">
+						{% if request.user.rol == 0 %}
 						<button class="btn btn-info col-md-3" data-toggle="modal" data-target="#agregar-visita-modal"
 							data-id-cliente="{{cliente.id}}"
 							data-id-vehiculo="{{vehiculo.id}}"
@@ -31,6 +38,7 @@
 						>
 							Agregar Visita&nbsp;&nbsp;&nbsp;<i class="fas fa-plus-circle"></i>
 						</button>
+						{% endif %}
 					</th>
 				</tr>
 				<tr class="d-flex bg-primary text-white text-center ">
@@ -55,7 +63,7 @@
 								>
 									Procesos &nbsp;&nbsp;<i class="fas fa-info-circle"></i>
 								</a>
-								{% if visita_vehiculo.finalizada == False %}
+								{% if visita_vehiculo.finalizada == False and request.user.rol == 0 %}
 									<button class="btn btn-warning" data-id-visita="{{visita_vehiculo.id}}" data-toggle="modal" data-target="#finalizar-visita-modal">
 										Finalizar Visita&nbsp;&nbsp;&nbsp;<i class="fas fa-check-double"></i>
 									</button>
@@ -67,9 +75,22 @@
 			</tbody>
 
 		{% empty %}
-			<tbody>
-				<tr>El Cliente no cuenta con vehículos registrados</tr>
-			</tbody>
+			<!-- <tbody>
+				<tr>
+					<td class="lead">El Cliente no cuenta con vehículos registrados</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="lead">¿Desea Registrar uno? Ve a la Gestión de Vehículos</td>
+					<td><a href="" class="btn btn-success">Gestión de Vehículos&nbsp;&nbsp;<i class="fas fa-car-side"></i></a></td>
+				</tr>
+
+			</tbody> -->
+
+			<div class="col-md-12 text-center">
+				<p class="lead">El Cliente no cuenta con vehículos registrados</p>
+				<p class="lead">¿Desea Registrar uno? Ve a la Gestión de Vehículos</p>
+				<a href="{% url 'vehiculos_admin' cliente_id=cliente.id %}" title="Agrega vehículos al cliente" class="btn btn-success">Gestión de Vehículos&nbsp;&nbsp;<i class="fas fa-car-side"></i></a>
 			</div>
 		{% endfor %}
 
