--- a/apps/taller/templates/visitas/visitas-cliente.html
+++ b/apps/taller/templates/visitas/visitas-cliente.html
@@ -28,7 +28,7 @@
 					<th class="col-6 border-0 "><i class="fas fa-car-side"></i>&nbsp;&nbsp;&nbsp;&nbsp;{{vehiculo.marca}}&nbsp;{{vehiculo.modelo}}&nbsp;-&nbsp;{{vehiculo.placa}}</th>
 					<th class="col-6 text-right border-0">
 						{% if request.user.rol == 0 %}
-						<a href="" class="btn btn-success" title="">
+						<a href="{% url 'expediente_vehiculo' vehiculo_id=vehiculo.id %}" class="btn btn-success" title="">
 							Actualizar Expediente &nbsp;&nbsp;<i class="fas fa-file-invoice"></i>
 						</a>&nbsp;&nbsp;
 						<button class="btn btn-info col-md-3" data-toggle="modal" data-target="#agregar-visita-modal"
@@ -62,10 +62,12 @@
 							<td class="col-4">{{visita_vehiculo.comentarios}}</td>
 							<td class="col-2">{{visita_vehiculo.tecnico.user.first_name}}&nbsp;{{visita_vehiculo.tecnico.user.last_name}}</td>
 							<td class="col-3 text-left">
-								<a href="{% url 'gestion_procesos_visita' visita_id=visita_vehiculo.id %}" class="btn btn-success" title="Ver detalles y procesos de la Visita"
-								>
+								<a href="{% url 'gestion_procesos_visita' visita_id=visita_vehiculo.id %}" class="btn btn-success" title="Ver detalles y procesos de la Visita">
 									Procesos &nbsp;&nbsp;<i class="fas fa-info-circle"></i>
 								</a>
+								{% if visita_vehiculo.finalizada == False and request.user.rol == 2 %}
+									&nbsp;&nbsp;<span class="text-warning font-weight-bold">Visita en Proceso</span>
+								{% endif %}
 								{% if visita_vehiculo.finalizada == False and request.user.rol == 0 %}
 									<button class="btn btn-warning" data-id-visita="{{visita_vehiculo.id}}" data-toggle="modal" data-target="#finalizar-visita-modal">
 										Finalizar Visita&nbsp;&nbsp;&nbsp;<i class="fas fa-check-double"></i>
