se unico con citas

--- a/apps/taller/templates/index_admin.html
+++ b/apps/taller/templates/index_admin.html
@@ -45,7 +45,7 @@
 				</div>
 			</div>
 		</a>
-		<a href="" class="card-link">
+		<a href="{% url 'citasA' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
 					<h4 class="card-title">Gesti&oacute;n de Citas</h4>
