--- a/apps/taller/templates/index_cliente.html
+++ b/apps/taller/templates/index_cliente.html
@@ -28,7 +28,7 @@
 			</div>
 		</a>
 
-		<a href="" class="card-link">
+		<a href="{% url 'citas' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
 					<h4 class="card-title">Solicitud de Citas</h4>
